SCRUM-178: Followed leaderboard API, tests, docs
